fixing some spacing

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -42,13 +42,15 @@
 		color: #8E898A;
 		font-weight:800;
 		text-transform: uppercase;
+		margin:2% 0;
 	}
 
 
 	p{
-		text-align: center;
+		text-align: left;
 		font-size: 0.8rem;
 		color: #676362;
+		padding: 0 5%;
 	}
 }
 
